Rename Market Pulse to Market Pulse: Job Market Analyst and update Salary Snapshot with new agent configuration

--- a/agents/job-match.html
+++ b/agents/job-match.html
@@ -22,7 +22,7 @@
 
       <nav class="nav" aria-label="Agents">
         <a class="" href="./market-pulse.html">
-          <span class="left"><span class="pill"></span> Market Pulse</span>
+          <span class="left"><span class="pill"></span> Market Pulse: Job Market Analyst</span>
           <span class="badge">Core</span>
         </a>
         <a class="" href="./salary-snapshot.html">
