--- a/agents/salary-snapshot.html
+++ b/agents/salary-snapshot.html
@@ -22,7 +22,7 @@
 
       <nav class="nav" aria-label="Agents">
         <a class="" href="./market-pulse.html">
-          <span class="left"><span class="pill"></span> Market Pulse</span>
+          <span class="left"><span class="pill"></span> Market Pulse: Job Market Analyst</span>
           <span class="badge">Core</span>
         </a>
         <a class="active" href="./salary-snapshot.html">
@@ -103,8 +103,8 @@
       hostURL: "https://au-syd.watson-orchestrate.cloud.ibm.com",
       deploymentPlatform: "ibmcloud",
       crn: "crn:v1:bluemix:public:watsonx-orchestrate:au-syd:a/4ad5443c7e9f401289c3ddae7579ffb6:2016f579-328c-4733-9a3e-194f465282a4::",
-      agentId: "REPLACE_WITH_AGENT_ID",
-      agentEnvironmentId: "REPLACE_WITH_AGENT_ENV_ID",
+      agentId: "72b8c0df-83e3-4b1d-b06b-f1209ace9f14",
+      agentEnvironmentId: "c85906e4-42f6-4925-b736-8af9ae4cf2dc",
       chatMountId: "chatMount",
 
       defaultLocale: "en",
