--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section class="grid">
       <a class="card" href="./agents/market-pulse.html">
         <span class="badge">Core • Market Intelligence</span>
-        <h3>Market Pulse</h3>
+        <h3>Market Pulse: Job Market Analyst</h3>
         <p>Skills, roles, and salary signals—summarized fast, with actionable direction.</p>
         <div class="meta">
           <span><span class="pill"></span> Primary agent</span>
