--- a/agents/market-pulse.html
+++ b/agents/market-pulse.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Market Pulse • Chat</title>
-  <meta name="description" content="Chat with the Market Pulse agent in a big, embedded UI." />
+  <title>Market Pulse: Job Market Analyst • Chat</title>
+  <meta name="description" content="Chat with the Market Pulse: Job Market Analyst agent in a big, embedded UI." />
   <link rel="stylesheet" href="../assets/styles.css" />
 </head>
 <body>
@@ -22,7 +22,7 @@
 
       <nav class="nav" aria-label="Agents">
         <a class="active" href="./market-pulse.html">
-          <span class="left"><span class="pill"></span> Market Pulse</span>
+          <span class="left"><span class="pill"></span> Market Pulse: Job Market Analyst</span>
           <span class="badge">Core</span>
         </a>
         <a class="" href="./salary-snapshot.html">
@@ -57,7 +57,7 @@
             ☰
           </button>
           <div>
-            <h2>Market Pulse</h2>
+            <h2>Market Pulse: Job Market Analyst</h2>
             <div class="sub">Skills • roles • salary signals</div>
           </div>
         </div>
