Add logo support - structure ready for logo image files

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <body>
   <div class="container">
     <section class="hero">
+      <div class="hero-logo">
+        <img src="./assets/images/logo.png" alt="Market Pulse" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+        <img src="./assets/images/logo.svg" alt="Market Pulse" style="display:none;" onerror="this.style.display='none';">
+      </div>
       <span class="badge"><span class="dot"></span> Embedded chat is live • Agent Hub</span>
       <h1>Market Pulse — pick an agent and chat full-screen.</h1>
       <p>
