Fix logo display - use img tags and place beside heading on main page

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
   <div class="container">
     <section class="hero">
-      <div class="hero-logo">
-        <div class="logo-square"></div>
-      </div>
       <span class="badge"><span class="dot"></span> Embedded chat is live • Agent Hub</span>
-      <h1>Market Pulse — pick an agent and chat full-screen.</h1>
+      <div class="hero-title">
+        <img src="./assets/images/logo.png" alt="Market Pulse" class="hero-logo-img">
+        <h1>Market Pulse — pick an agent and chat full-screen.</h1>
+      </div>
       <p>
         This hub is designed to scale: each agent gets its own route/page so the embedded script loads only once per page.
         Click a card to open a dedicated, big chat panel.
