--- a/agents/salary-snapshot.html
+++ b/agents/salary-snapshot.html
@@ -13,7 +13,7 @@
   <div class="shell">
     <aside class="sidebar">
       <div class="brand">
-        <div class="logo" aria-hidden="true"></div>
+        <div class="logo"><img src="../assets/images/logo.png" alt="Market Pulse"></div>
         <div class="title">
           <strong>Market Pulse</strong>
           <small>Agent Hub</small>
