Restructure: Rename to Job Market Analyst, add Job Matcher, remove Salary Snapshot and Skill Upgrade

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section class="grid">
       <a class="card" href="./agents/market-pulse.html">
         <span class="badge">Core • Market Intelligence</span>
-        <h3>Market Pulse: Job Market Analyst</h3>
+        <h3>Job Market Analyst</h3>
         <p>Skills, roles, and salary signals—summarized fast, with actionable direction.</p>
         <div class="meta">
           <span><span class="pill"></span> Primary agent</span>
@@ -29,29 +29,9 @@
         </div>
       </a>
 
-      <a class="card" href="./agents/salary-snapshot.html">
-        <span class="badge">Compensation</span>
-        <h3>Salary Snapshot</h3>
-        <p>Pay bands by role and location—clear, comparable, and decision-ready.</p>
-        <div class="meta">
-          <span><span class="pill"></span> Location-aware</span>
-          <span class="go">Open chat →</span>
-        </div>
-      </a>
-
-      <a class="card" href="./agents/skill-upgrade.html">
-        <span class="badge">Learning Plan</span>
-        <h3>Skill Upgrade</h3>
-        <p>Get a focused learning path: the shortest route to job-relevant skills.</p>
-        <div class="meta">
-          <span><span class="pill"></span> Structured roadmap</span>
-          <span class="go">Open chat →</span>
-        </div>
-      </a>
-
-      <a class="card" href="./agents/job-match.html">
+      <a class="card" href="./agents/job-matcher.html">
         <span class="badge">Discovery</span>
-        <h3>Job Match</h3>
+        <h3>Job Matcher</h3>
         <p>Find matching roles quickly—translate your current skills into target roles.</p>
         <div class="meta">
           <span><span class="pill"></span> Faster search</span>
