--- a/agents/job-match.html
+++ b/agents/job-match.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Job Match • Chat</title>
-  <meta name="description" content="Chat with the Job Match agent in a big, embedded UI." />
+  <title>Job Matcher • Chat</title>
+  <meta name="description" content="Chat with the Job Matcher agent in a big, embedded UI." />
   <link rel="stylesheet" href="../assets/styles.css" />
 </head>
 <body>
@@ -22,20 +22,12 @@
 
       <nav class="nav" aria-label="Agents">
         <a class="" href="./market-pulse.html">
-          <span class="left"><span class="pill"></span> Market Pulse: Job Market Analyst</span>
+          <span class="left"><span class="pill"></span> Job Market Analyst</span>
           <span class="badge">Core</span>
         </a>
-        <a class="" href="./salary-snapshot.html">
-          <span class="left"><span class="pill"></span> Salary Snapshot</span>
-          <span class="badge">Pay</span>
-        </a>
-        <a class="" href="./skill-upgrade.html">
-          <span class="left"><span class="pill"></span> Skill Upgrade</span>
-          <span class="badge">Plan</span>
-        </a>
-        <a class="active" href="./job-match.html">
-          <span class="left"><span class="pill"></span> Job Match</span>
-          <span class="badge">Roles</span>
+        <a class="active" href="./job-matcher.html">
+          <span class="left"><span class="pill"></span> Job Matcher</span>
+          <span class="badge">Discovery</span>
         </a>
       </nav>
 
@@ -57,7 +49,7 @@
             ☰
           </button>
           <div>
-            <h2>Job Match</h2>
+            <h2>Job Matcher</h2>
             <div class="sub">Find matching roles fast</div>
           </div>
         </div>
@@ -103,8 +95,8 @@
       hostURL: "https://au-syd.watson-orchestrate.cloud.ibm.com",
       deploymentPlatform: "ibmcloud",
       crn: "crn:v1:bluemix:public:watsonx-orchestrate:au-syd:a/4ad5443c7e9f401289c3ddae7579ffb6:2016f579-328c-4733-9a3e-194f465282a4::",
-      agentId: "REPLACE_WITH_AGENT_ID",
-      agentEnvironmentId: "REPLACE_WITH_AGENT_ENV_ID",
+      agentId: "38b5772e-942e-4c08-8604-5acfdd15465b",
+      agentEnvironmentId: "8840723d-8d32-4bbf-a6b4-0bc9514f70cf",
       chatMountId: "chatMount",
 
       defaultLocale: "en",
