--- a/agents/job-matcher.html
+++ b/agents/job-matcher.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Salary Snapshot • Chat</title>
-  <meta name="description" content="Chat with the Salary Snapshot agent in a big, embedded UI." />
+  <title>Job Matcher • Chat</title>
+  <meta name="description" content="Chat with the Job Matcher agent in a big, embedded UI." />
   <link rel="stylesheet" href="../assets/styles.css" />
 </head>
 <body>
@@ -22,20 +22,12 @@
 
       <nav class="nav" aria-label="Agents">
         <a class="" href="./market-pulse.html">
-          <span class="left"><span class="pill"></span> Market Pulse: Job Market Analyst</span>
+          <span class="left"><span class="pill"></span> Job Market Analyst</span>
           <span class="badge">Core</span>
         </a>
-        <a class="active" href="./salary-snapshot.html">
-          <span class="left"><span class="pill"></span> Salary Snapshot</span>
-          <span class="badge">Pay</span>
-        </a>
-        <a class="" href="./skill-upgrade.html">
-          <span class="left"><span class="pill"></span> Skill Upgrade</span>
-          <span class="badge">Plan</span>
-        </a>
-        <a class="" href="./job-match.html">
-          <span class="left"><span class="pill"></span> Job Match</span>
-          <span class="badge">Roles</span>
+        <a class="active" href="./job-matcher.html">
+          <span class="left"><span class="pill"></span> Job Matcher</span>
+          <span class="badge">Discovery</span>
         </a>
       </nav>
 
@@ -57,8 +49,8 @@
             ☰
           </button>
           <div>
-            <h2>Salary Snapshot</h2>
-            <div class="sub">Pay bands by role and location</div>
+            <h2>Job Matcher</h2>
+            <div class="sub">Find matching roles fast</div>
           </div>
         </div>
         <div class="right">
@@ -77,14 +69,14 @@
               <strong>How to use</strong><br/>
               <small>Quick prompts</small>
             </div>
-            <span class="badge">Pay</span>
+            <span class="badge">Roles</span>
           </header>
           <div class="body">
-            <div>Get a clear range for compensation and negotiate with confidence.</div>
+            <div>Translate your experience into roles you can realistically land next.</div>
             <ul>
-              <li>“PM vs SWE pay in Houston vs Austin.”</li>
-<li>“What’s a reasonable range for new grad SRE?”</li>
-<li>“How do RSUs typically compare across company sizes?”</li>
+              <li>“Given my background, what roles should I target?”</li>
+<li>“Rewrite my experience into role-specific bullets.”</li>
+<li>“Which industries hire for platform engineers without LeetCode?”</li>
             </ul>
             <div class="hint">
               <strong>Pro tip:</strong> For best reliability, keep the Orchestrate embed script loaded only once per page.
@@ -103,8 +95,8 @@
       hostURL: "https://au-syd.watson-orchestrate.cloud.ibm.com",
       deploymentPlatform: "ibmcloud",
       crn: "crn:v1:bluemix:public:watsonx-orchestrate:au-syd:a/4ad5443c7e9f401289c3ddae7579ffb6:2016f579-328c-4733-9a3e-194f465282a4::",
-      agentId: "72b8c0df-83e3-4b1d-b06b-f1209ace9f14",
-      agentEnvironmentId: "c85906e4-42f6-4925-b736-8af9ae4cf2dc",
+      agentId: "38b5772e-942e-4c08-8604-5acfdd15465b",
+      agentEnvironmentId: "8840723d-8d32-4bbf-a6b4-0bc9514f70cf",
       chatMountId: "chatMount",
 
       defaultLocale: "en",
