--- a/agents/market-pulse.html
+++ b/agents/market-pulse.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Market Pulse: Job Market Analyst • Chat</title>
-  <meta name="description" content="Chat with the Market Pulse: Job Market Analyst agent in a big, embedded UI." />
+  <title>Job Market Analyst • Chat</title>
+  <meta name="description" content="Chat with the Job Market Analyst agent in a big, embedded UI." />
   <link rel="stylesheet" href="../assets/styles.css" />
 </head>
 <body>
@@ -22,20 +22,12 @@
 
       <nav class="nav" aria-label="Agents">
         <a class="active" href="./market-pulse.html">
-          <span class="left"><span class="pill"></span> Market Pulse: Job Market Analyst</span>
+          <span class="left"><span class="pill"></span> Job Market Analyst</span>
           <span class="badge">Core</span>
         </a>
-        <a class="" href="./salary-snapshot.html">
-          <span class="left"><span class="pill"></span> Salary Snapshot</span>
-          <span class="badge">Pay</span>
-        </a>
-        <a class="" href="./skill-upgrade.html">
-          <span class="left"><span class="pill"></span> Skill Upgrade</span>
-          <span class="badge">Plan</span>
-        </a>
-        <a class="" href="./job-match.html">
-          <span class="left"><span class="pill"></span> Job Match</span>
-          <span class="badge">Roles</span>
+        <a class="" href="./job-matcher.html">
+          <span class="left"><span class="pill"></span> Job Matcher</span>
+          <span class="badge">Discovery</span>
         </a>
       </nav>
 
@@ -57,7 +49,7 @@
             ☰
           </button>
           <div>
-            <h2>Market Pulse: Job Market Analyst</h2>
+            <h2>Job Market Analyst</h2>
             <div class="sub">Skills • roles • salary signals</div>
           </div>
         </div>
