Update copy: remove developer-focused text, improve descriptions, update badges and meta text

--- a/agents/job-matcher.html
+++ b/agents/job-matcher.html
@@ -23,22 +23,14 @@
       <nav class="nav" aria-label="Agents">
         <a class="" href="./market-pulse.html">
           <span class="left"><span class="pill"></span> Job Market Analyst</span>
-          <span class="badge">Core</span>
         </a>
         <a class="active" href="./job-matcher.html">
           <span class="left"><span class="pill"></span> Job Matcher</span>
-          <span class="badge">Discovery</span>
         </a>
       </nav>
 
       <div class="footer">
         <div class="badge"><span class="dot"></span> Embedded chat enabled</div>
-        <div>
-          <div style="margin-bottom:6px;">Good practice:</div>
-          <div style="color:var(--muted); line-height:1.4">
-            One agent per page keeps the embed script single-loaded and predictable.
-          </div>
-        </div>
       </div>
     </aside>
 
@@ -69,7 +61,6 @@
               <strong>How to use</strong><br/>
               <small>Quick prompts</small>
             </div>
-            <span class="badge">Roles</span>
           </header>
           <div class="body">
             <div>Translate your experience into roles you can realistically land next.</div>
@@ -79,7 +70,7 @@
 <li>“Which industries hire for platform engineers without LeetCode?”</li>
             </ul>
             <div class="hint">
-              <strong>Pro tip:</strong> For best reliability, keep the Orchestrate embed script loaded only once per page.
+              <strong>Tip:</strong> Share your current role, skills, or career goals to get personalized job recommendations.
             </div>
           </div>
         </aside>
