--- a/index.html
+++ b/index.html
@@ -11,30 +11,29 @@
   <div class="container">
     <section class="hero">
       <span class="badge"><span class="dot"></span> Embedded chat is live • Agent Hub</span>
-      <h1>Market Pulse — pick an agent and chat full-screen.</h1>
+      <h1>Market Pulse — pick an agent and chat.</h1>
       <p>
-        This hub is designed to scale: each agent gets its own route/page so the embedded script loads only once per page.
-        Click a card to open a dedicated, big chat panel.
+        Get real-time insights into job markets, salary trends, and career opportunities. Our AI-powered agents help you make informed decisions about your career path, understand market demand, and find roles that match your skills.
       </p>
     </section>
 
     <section class="grid">
       <a class="card" href="./agents/market-pulse.html">
-        <span class="badge">Core • Market Intelligence</span>
+        <span class="badge">Market Intelligence</span>
         <h3>Job Market Analyst</h3>
         <p>Skills, roles, and salary signals—summarized fast, with actionable direction.</p>
         <div class="meta">
-          <span><span class="pill"></span> Primary agent</span>
+          <span><span class="pill"></span> Market insights</span>
           <span class="go">Open chat →</span>
         </div>
       </a>
 
       <a class="card" href="./agents/job-matcher.html">
-        <span class="badge">Discovery</span>
+        <span class="badge">Career Matching</span>
         <h3>Job Matcher</h3>
         <p>Find matching roles quickly—translate your current skills into target roles.</p>
         <div class="meta">
-          <span><span class="pill"></span> Faster search</span>
+          <span><span class="pill"></span> Find your match</span>
           <span class="go">Open chat →</span>
         </div>
       </a>
